feat(rest): Add available quantity field
